; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scu.c_ScuDspSaveProgram.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scu.c_ScuDspSaveProgram.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@ScuDsp = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ScuDspSaveProgram(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %97

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32* @fopen(i8* %11, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 -1, i32* %2, align 4
  br label %97

15:                                               ; preds = %10
  %16 = call i64 @malloc(i32 8)
  %17 = inttoptr i64 %16 to i64*
  store i64* %17, i64** %6, align 8
  %18 = icmp eq i64* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @fclose(i32* %20)
  store i32 -2, i32* %2, align 4
  br label %97

22:                                               ; preds = %15
  store i32 0, i32* %5, align 4
  br label %23

23:                                               ; preds = %85, %22
  %24 = load i32, i32* %5, align 4
  %25 = icmp slt i32 %24, 256
  br i1 %25, label %26, label %88

26:                                               ; preds = %23
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ScuDsp, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %5, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = ashr i32 %33, 24
  %35 = sext i32 %34 to i64
  %36 = load i64*, i64** %6, align 8
  %37 = load i32, i32* %5, align 4
  %38 = mul nsw i32 %37, 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i64, i64* %36, i64 %39
  store i64 %35, i64* %40, align 8
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ScuDsp, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i32*, i32** %42, align 8
  %44 = load i32, i32* %5, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = ashr i32 %47, 16
  %49 = sext i32 %48 to i64
  %50 = load i64*, i64** %6, align 8
  %51 = load i32, i32* %5, align 4
  %52 = mul nsw i32 %51, 4
  %53 = add nsw i32 %52, 1
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i64, i64* %50, i64 %54
  store i64 %49, i64* %55, align 8
  %56 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ScuDsp, align 8
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = load i32, i32* %5, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = ashr i32 %62, 8
  %64 = sext i32 %63 to i64
  %65 = load i64*, i64** %6, align 8
  %66 = load i32, i32* %5, align 4
  %67 = mul nsw i32 %66, 4
  %68 = add nsw i32 %67, 2
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds i64, i64* %65, i64 %69
  store i64 %64, i64* %70, align 8
  %71 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ScuDsp, align 8
  %72 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %71, i32 0, i32 0
  %73 = load i32*, i32** %72, align 8
  %74 = load i32, i32* %5, align 4
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds i32, i32* %73, i64 %75
  %77 = load i32, i32* %76, align 4
  %78 = sext i32 %77 to i64
  %79 = load i64*, i64** %6, align 8
  %80 = load i32, i32* %5, align 4
  %81 = mul nsw i32 %80, 4
  %82 = add nsw i32 %81, 3
  %83 = sext i32 %82 to i64
  %84 = getelementptr inbounds i64, i64* %79, i64 %83
  store i64 %78, i64* %84, align 8
  br label %85

85:                                               ; preds = %26
  %86 = load i32, i32* %5, align 4
  %87 = add nsw i32 %86, 1
  store i32 %87, i32* %5, align 4
  br label %23

88:                                               ; preds = %23
  %89 = load i64*, i64** %6, align 8
  %90 = bitcast i64* %89 to i8*
  %91 = load i32*, i32** %4, align 8
  %92 = call i32 @fwrite(i8* %90, i32 1, i32 8, i32* %91)
  %93 = load i32*, i32** %4, align 8
  %94 = call i32 @fclose(i32* %93)
  %95 = load i64*, i64** %6, align 8
  %96 = call i32 @free(i64* %95)
  store i32 0, i32* %2, align 4
  br label %97

97:                                               ; preds = %88, %19, %14, %9
  %98 = load i32, i32* %2, align 4
  ret i32 %98
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @fwrite(i8*, i32, i32, i32*) #1

declare dso_local i32 @free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
